<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">BookStoreApp</string>
    <string name="search">Search</string>
    <string name="mainActivity_title">Books Catalogue</string>

    <!-- Strings related to menus -->
    <string name="title_activity_settings">Settings</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_data">Delete all books</string>

    <!-- Strings for Toast Messages -->
    <string name="quantity_updated">Quantity Updated</string>
    <string name="item_sold">The stock has been reduced by 1</string>
    <string name="quantity_already_zero">This item is out of Stock. You can\'t sell anymore of it</string>
    <string name="delete_all_ok">All Books Deleted</string>
    <string name="delete_all_error">Something went wrong or maybe the database is empty</string>

    <!-- Strings for mainActivity -->
    <string name="in_stock">In Stock! <xliff:g example="1" id="quantity">%s </xliff:g> remaining</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="empty_view_title_text">The books Catalog is empty!</string>
    <string name="empty_view_subtitle_text">Add a book tapping on the plus button....</string>

    <!-- Strings for EditorActivity -->
    <string name="editor_activity_title_new_product">Insert Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="editor_activity_editItemUpdated">The item has been updated</string>
    <string name="editor_activity_editItemNotUpdated">Something went wrong. The item has not been updated.</string>
    <string name="editor_activity_newItemInserted">The new item has been inserted</string>
    <string name="editor_activity_newItemNotInserted">Something went wrong. The new item has not been inserted.</string>
    <string name="delete_confirmation_dialog_message">Are you sure you want to delete this book? The action cannot be undone</string>
    <string name="delete_confirmation_dialog_positive_Button">Sure</string>
    <string name="delete_confirmation_dialog_negative_Button">Not Sure</string>
    <string name="EditProductSupplierLabel">Supplier</string>
    <string name="EditProductPriceLabel">Price (euro)</string>
    <string name="EditProductQuantityLabel">Quantity in Stock</string>
    <string name="EditProductAuthorLabel">Author</string>
    <string name="EditProductTitleLabel">Title</string>
    <string name="EditProductSupplierPhoneLabel">Supplier Phone</string>
    <string name="EditProductTitleEmptyWarning">Please insert a title for the book</string>
    <string name="EditProductAuthorEmptyWarning">Please insert an author for the book</string>
    <string name="EditProductQuantityEmptyWarning">Please insert a quantity for the book</string>
    <string name="EditProductPriceEmptyWarning">Please insert a price for the book</string>
    <string name="EditProductSupplierEmptyWarning">Please select a supplier for the book</string>
    <string name="saveButtonLabel">Save</string>
    <string name="deleteButtonLabel">Delete</string>
    <string name="addButtonLabel">Add</string>
    <string name="removeButtonLabel">Remove</string>
    <string name="quantity_ET_hint"><![CDATA[Must be > 0]]></string>
    <string name="author_ET_hint">Author</string>
    <string name="title_ET_hint">Title</string>
    <string name="EditProductErrorSupplierPhone">Error while retrieving the phone number for the supplier</string>

    <!-- Strings related to Settings -->
    <string name="settings_category_order_label">Order preferences</string>
    <string name="settings_value_not_defined">Not defined</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order by</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_name_value</string>
    <!-- Label for order-by Name option [CHAR LIMIT=20] -->
    <string name="settings_order_by_name_label">Title of the book</string>
    <string name="settings_order_by_name_value" translatable="false">name</string>
    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_author_label">Author</string>
    <string name="settings_order_by_author_value" translatable="false">author</string>
    <!-- Label for order-by oldest option [CHAR LIMIT=20] -->
    <string name="settings_order_by_quantity_ASC_label">Quantity in Stock</string>
    <string name="settings_order_by_quantity_ASC_value" translatable="false">quantity_ASC</string>

</resources>
